<resources>
    <string name="app_name">Family Monitoring</string>
    <string name="phone">Phone</string>
    <string name="password">Code</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_user">Remember user</string>
    <string name="country_code">Code</string>

    <!---Activity AddContactActivity-->
    <string name="accept">Accept</string>

    <!--Drawer and Tabs-->
    <string name="tab_contact">Contacts</string>
    <string name="tab_monitoring">Monitoring</string>

    <!--Drawer-->
    <string name="drawer_account">Account</string>
    <string name="drawer_setting">Setting</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_help">Help</string>

    <!--Menu-->
    <string name="menu_see_map">See on the map</string>
    <string name="menu_delete_contact">Delete contact</string>


    <!--Messages-->
    <string name="message_valid_phone">Phone number is empty, please try again.</string>
    <string name="message_valid_password">Passwords are not the same, please try again.</string>
    <string name="message_valid_email">Email is not valid, please try again.</string>
    <string name="message_empty_input">The fields are required.</string>
    <string name="message_successful_registration">Successful registration</string>
    <string name="message_error_saving">Error saving</string>

    <string name="message_delete">Deleted...!</string>
    <string name="message_permission">Allow this user to view your location</string>
    <string name="message_permission_title">Share location</string>
    <string name="message_permission_cancel">Don\'t Share</string>
    <string name="message_permission_accept">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_duplicate">The phone number you have entered is already registered, try another please</string>
    <string name="have_code">I have a code</string>
</resources>
