<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_top" android:checkableBehavior="single">
        <item android:id="@+id/menu_contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/tab_contact"/>
        <item android:id="@+id/menu_monitoring"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/tab_monitoring"/>
    </group>

    <group android:id="@+id/menu_center" android:checkableBehavior="single">
        <item android:id="@+id/menu_account"
            android:icon="@drawable/ic_account"
            android:title="@string/drawer_account"/>
        <item android:id="@+id/menu_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/drawer_setting"/>
        <item android:id="@+id/menu_logout"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/drawer_logout"/>
    </group>

    <group android:id="@+id/menu_bottom" android:checkableBehavior="none">
        <item android:id="@+id/menu_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/drawer_help"/>
    </group>
    <!--item android:title="Otras Opciones">
        <menu>
            <item android:id="@+id/menu_opcion_1"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="Opción 1"/>
            <item android:id="@+id/menu_opcion_2"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="Opción 2"/>
        </menu>
    </-item-->
</menu>